FIX: Dragzone overlapping (#1333)
* FIX: Dragzone overlapping

Changes:
- inline styles moved from ../ImportImage/Ui.js to demo.css
- minor code improvements

The change was necessary because in the old UI dragzone was overlapping
an image.

Resolves #1294

* FIX: Improve commit #ead4b932

Changes:
- rollback .dropzone input style
- add styles to  .import-image-zone input element

* FIX:  .import-image-zone input element width

Changes:
-  max-width increased to 120% on import-image-zone input element

* FIX: .import-image-zone max-width

Changes:
- rollback .import-image-zone input max-width to fit-content
- increase .import-image-zone max-width from 230px to 250px

* FIX: .import-image-zone input element max-width

Changes:
 - max-width set to 100%

--- a/examples/demo.css
+++ b/examples/demo.css
@@ -69,12 +69,22 @@ body > .container-fluid {
   min-width:300px;
 }
 
-.hover {
-  background: #eee;
-}
-
 .dropzone input {
   max-width: 100%;
+}
+
+.import-image-zone {
+  margin: 10px auto 30px auto;
+  max-width: 250px;
+  min-width: 230px;
+}
+
+.import-image-zone input {
+  max-width: 100%;
+}
+
+.hover {
+  background: #eee;
 }
 
 .step {
@@ -252,7 +262,7 @@ a.name-header{
 }
 
 .step-column{
-  display:flex; 
+  display:flex;
   align-content: center;
   justify-content: center;
 }
@@ -276,9 +286,9 @@ a.name-header{
   width:100%;
 }
 .save-button{
-  margin-top:20px; 
+  margin-top:20px;
   margin-bottom:0px;
-  align:center; 
+  align:center;
   width:100%;
 }
 
@@ -287,7 +297,7 @@ a.name-header{
 }
 
 .dimension-tooltip:hover{
-  text-decoration: none;  
+  text-decoration: none;
 }
 
 .dimension-tooltip:focus{
